--- a/02-Farvegirnir.Rmd
+++ b/02-Farvegirnir.Rmd
@@ -34,11 +34,11 @@ kable(collapse_rows_dt, align = "c") %>%
 
 Á landi berst örplast með vatni, vindi og með athöfnum manna. Helsta uppspretta örplasts sem dreifist með vindi er slit hjólbarða bifreiða sem sest við vegi [@Cadle1978]. Dreifing örplasts getur einnig gerst með notkun seyru til landgræðslu en algengt er að hún innihaldi örplast úr snyrtivörum [@zitko1991another] og plastúrgangi sem berst í skólphreinsistöðvar og rotþrær. Það sama getur gilt um jarðbæti unninn úr úrgangi sem inniheldur plast, einkum ef ekki er gert ráð fyrir hreinsun örplasts í míkró- og nanóstærð.
 
-```{r vatnasvidsv, fig.cap='Fjögur megin vatnasvæði Íslands. Skálínurnar liggja yfir vatnasvæði nr. 104 á suðvesturhorni landsins', out.width='100%', fig.align='center', echo=FALSE}
+```{r vatnasvidsv, fig.cap='Fjórir flokkar náttúrulegra yfirborðsvatnshlota Íslands. Skálínurnar liggja yfir vatnasvæði nr. 4 á suðvesturhorni landsins.', out.width='100%', fig.align='center', echo=FALSE}
 knitr::include_graphics("myndir/map.png")
 ```
 
-Þegar losun örplasts á Íslandi er skoðuð er rétt að taka suðvestur horn landsins út fyrir sviga. Þar sem helsta farleið örplasts er með rennandi vatni er hér notast við skiptingu íslenska vatnaumdæmisins í fjögur meginvatnasvæði [@Bj2012]. Á suðvesturhorni landsins er vatnasvæði sem rennur í Faxaflóa (sjá mynd \@ref(fig:vatnasvidsv)). Á því svæði býr um 3/4 landsmanna ^[http://px.hagstofa.is/pxis/pxweb/is/Ibuar/Ibuar__mannfjoldi__2_byggdir__Byggdakjarnar/MAN03106.px/table/tableViewLayout1/?rxid=830c3a84-47bf-4090-8227-4c683a2f2770] og þar er summa [árdagsumferðar](http://www.vegagerdin.is/upplysingar-og-utgafa/umferdin/adferdarfraedi-talninga/) rúmir 3/4 hlutar á landsvísu. Flatarmál bygginga þar er yfir 50% flatarmáls allra bygginga á landsvísu [@OpenStreetMap] en flatarmál málaðra flata eflaust enn meiri vegna byggingarhæðar. Flestir landsmenn fara til Reykjavíkur reglulega til að sækja þjónustu sem þar er í boði, nær allar vöruflutningar eru um svæðið og nærri allt millilandaflug. Þrír stórir slippir af fjórum eru á Höfuðborgarsvæðinu og í Grindavík. Það er því rík ástæða til að skoða þetta svæði betur.
+Þegar losun örplasts á Íslandi er skoðuð er rétt að taka suðvestur horn landsins út fyrir sviga. Þar sem helsta farleið örplasts er með rennandi vatni er hér notast við skiptingu íslenska vatnaumdæmisins í fjögur meginvatnasvæði [@Bj2012]. Á suðvesturhorni landsins er vatnasvæði sem rennur í Faxaflóa (sjá mynd \@ref(fig:vatnasvidsv)). Á því svæði býr yfir 3/4 hlutar landsmanna ^[http://px.hagstofa.is/pxis/pxweb/is/Ibuar/Ibuar__mannfjoldi__2_byggdir__Byggdakjarnar/MAN03106.px/table/tableViewLayout1/?rxid=830c3a84-47bf-4090-8227-4c683a2f2770] og þar er summa [árdagsumferðar](http://www.vegagerdin.is/upplysingar-og-utgafa/umferdin/adferdarfraedi-talninga/) rúmir 3/4 hlutar á landsvísu. Flatarmál bygginga þar er yfir 50% flatarmáls allra bygginga á landsvísu [@OpenStreetMap] en flatarmál málaðra flata eflaust enn meiri vegna byggingarhæðar. Flestir landsmenn fara til Reykjavíkur reglulega til að sækja þjónustu sem þar er í boði, nær allar vöruflutningar eru um svæðið og nærri allt millilandaflug. Þrír stórir slippir af fjórum eru á Höfuðborgarsvæðinu og í Grindavík. Það er því rík ástæða til að skoða þetta svæði betur.
 
 ### Skólp og ræsi {-}
 
